# rdkafka

./: .gitignore  .gitmodules  LICENSE  README.md
.github/workflows/: build.yml
librdkafka/: CMakeLists.txt  idf_component.yml
librdkafka/examples/producer/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
librdkafka/examples/producer/main/: CMakeLists.txt  idf_component.yml  producer.c
librdkafka/port/: config.h  stubs.c  wrapped_functions.c
librdkafka/port/include/: esp_rdkafka.h
